// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test RightBarService Should have correct component 1`] = `
<DocumentFragment>
  <div>
    taskInfo
  </div>
</DocumentFragment>
`;

exports[`Test RightBarService Should have correct component 2`] = `
<DocumentFragment>
  <div>
    schedulingConfig
  </div>
</DocumentFragment>
`;

exports[`Test RightBarService Should have correct component 3`] = `
<DocumentFragment>
  <div>
    taskParams
  </div>
</DocumentFragment>
`;

exports[`Test RightBarService Should have correct component 4`] = `
<DocumentFragment>
  <div>
    envParams
  </div>
</DocumentFragment>
`;

exports[`Test RightBarService Should have correct component 5`] = `
<DocumentFragment>
  <div>
    taskConfig
  </div>
</DocumentFragment>
`;

exports[`Test RightBarService Should have correct component 6`] = `
<DocumentFragment>
  <div>
    flinkSource
  </div>
</DocumentFragment>
`;

exports[`Test RightBarService Should have correct component 7`] = `
<DocumentFragment>
  <div>
    flinkResult
  </div>
</DocumentFragment>
`;

exports[`Test RightBarService Should have correct component 8`] = `
<DocumentFragment>
  <div>
    flinkDimension
  </div>
</DocumentFragment>
`;

exports[`Test RightBarService Should have get invalid status 1`] = `
<div
  className="text-center mt-10px"
>
  无法获取
  未知
</div>
`;

exports[`Test RightBarService Should have get invalid status 2`] = `
<div
  className="text-center mt-10px"
>
  无法获取
  未知
</div>
`;
